--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,12 @@
-include.path=${php.global.include.path}
+auxiliary.org-netbeans-modules-php-doctrine2.enabled=true
+file.reference.Doctrine-DBAL=../../../../../../php-dev/vendor/doctrine/dbal/lib/Doctrine/DBAL
+file.reference.Doctrine-ORM=../../../../../../php-dev/vendor/doctrine/orm/lib/Doctrine/ORM
+file.reference.vendor-doctrine=../../../../../../php-dev/vendor/doctrine
+include.path=\
+    ${php.global.include.path}:\
+    ${file.reference.vendor-doctrine}:\
+    ${file.reference.Doctrine-ORM}:\
+    ${file.reference.Doctrine-DBAL}
 php.version=PHP_54
 project.license=bsd
 source.encoding=UTF-8
