--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,10 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "ext-pdo": "*",
-        "doctrine/collections": "~1.1",
-        "doctrine/dbal": "~2.4",
-        "symfony/console": "~2.0"
+        "doctrine/orm": "*"
     },
     "require-dev": {
-        "symfony/yaml": "~2.1",
-        "satooshi/php-coveralls": "dev-master"
-    },
-    "suggest": {
-        "doctrine/orm": "Requires Doctrine (doctrine/dbal)"
+        "symfony/yaml": "*"
     },
     "autoload": {
         "psr-4": { "helicon\\doctrine\\lib\\": ""}
