--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         "symfony/yaml": "*"
     },
     "autoload": {
-        "psr-4": { "helicon\\doctrine\\lib\\": ""}
+        "psr-4": { "helicon\\doctrine\\lib\\": "lib"}
     }
 }
